<resources>
    <string name="app_name">DH Wallet</string>
    <string name="content_description_profile">foto do perfil</string>
    <string name="title_limit">Limite</string>
    <string name="content_description_credit_card_flag">bandeira visa</string>
    <string name="credit_card_title_name">Nome</string>
    <string name="credit_card_title_expire">VALIDADE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="titulo_telaTranferir">Transferência</string>
    <string name="title_pesquisar_hint">Pesquisar</string>
    <string name="titulo_contato_tela_fragment">Contatos</string>
    <string name="dadosDoContato">Dados do contato</string>
    <string name="nomeDoContato">Nome do Contato</string>
    <string name="descricao_imagem_do_contato">Foto do contato</string>
</resources>